@@ -1939,6 +1939,13 @@
               </property>
              </widget>
             </item>
+            <item row="11" column="0">
+             <widget class="QCheckBox" name="ttsSpeakListsChkBox">
+              <property name="text">
+               <string>Speak selected item in lists</string>
+              </property>
+             </widget>
+            </item>
            </layout>
           </item>
           <item>
